--- a/2_Heart_Disease_Classification/notebook.ipynb
+++ b/2_Heart_Disease_Classification/notebook.ipynb
@@ -6,7 +6,7 @@
         "id": "I6YTVaBecrOk"
       },
       "source": [
-        "# Project 2: Multi-class Dog Breed Classification"
+        "# Project 2: Heart Disease Classification"
       ]
     },
     {
