--- a/3_Multiclass_Dog_Breed_Classification/notebook.ipynb
+++ b/3_Multiclass_Dog_Breed_Classification/notebook.ipynb
@@ -21,18 +21,38 @@
     {
       "cell_type": "code",
       "source": [
-        "# Import necessary tools\n",
         "import tensorflow as tf\n",
         "import tensorflow_hub as hub\n",
         "print(\"TF version:\", tf.__version__)\n",
-        "print(\"TF Hub version:\", hub.__version__)\n",
-        "\n",
-        "# Check for GPU availability\n",
-        "print(\"GPU\", \"available (YESSSS!!!!!)\" if tf.config.list_physical_devices(\"GPU\") else \"not available :(\")"
+        "print(\"TF Hub version:\", hub.__version__)"
       ],
       "metadata": {
         "id": "xt6JlgAPaHyB",
-        "outputId": "b5ac4817-334e-4a35-9815-fabb9874d1fc",
+        "outputId": "1ec0173f-2e51-42ea-9f73-c1cd8a99d2e2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "TF version: 2.18.0\n",
+            "TF Hub version: 0.16.1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"GPU\", \"available\" if tf.config.list_physical_devices(\"GPU\") else \"not available\")"
+      ],
+      "metadata": {
+        "id": "tOb61cKeqTe-",
+        "outputId": "1df2306b-6eb1-4211-8984-7da095eca3ab",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -43,9 +63,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "TF version: 2.18.0\n",
-            "TF Hub version: 0.16.1\n",
-            "GPU not available :(\n"
+            "GPU not available\n"
           ]
         }
       ]
@@ -65,17 +83,6 @@
         "import matplotlib.pyplot as plt\n",
         "import sklearn"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(\"GPU\", \"available\" if tf.config.list_physical_devices(\"GPU\") else \"not available\")"
-      ],
-      "metadata": {
-        "id": "q9QlFGs7iOkp"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -101,10 +108,28 @@
         "!unzip dog-breed-identification.zip"
       ],
       "metadata": {
-        "id": "_w-MxXkXcSrK"
+        "id": "_w-MxXkXcSrK",
+        "outputId": "c2e82dfe-f666-4d83-c3eb-07ef1e2bc280",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Archive:  dog-breed-identification.zip\n",
+            "  End-of-central-directory signature not found.  Either this file is not\n",
+            "  a zipfile, or it constitutes one disk of a multi-part archive.  In the\n",
+            "  latter case the central directory and zipfile comment will be found on\n",
+            "  the last disk(s) of this archive.\n",
+            "unzip:  cannot find zipfile directory in one of dog-breed-identification.zip or\n",
+            "        dog-breed-identification.zip.zip, and cannot find dog-breed-identification.zip.ZIP, period.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -119,7 +144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "pbtnZmksfNZb",
         "collapsed": true,
@@ -2090,8 +2115,7 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "toc_visible": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "base",
